appjava/deployment-java-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-app
  namespace: java-app-space
spec:
  replicas: 2
  selector:
    matchLabels:
      app: java-app
  template:
    metadata:
      labels:
        app: java-app
    spec:
      containers:
      - name: java-app
        image: tkquoc/tkquoc-java-app:9
        ports:
        - containerPort: 8080
