appjava/service-java-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-app-service
  namespace: java-app-space
spec:
  type: ClusterIP
  selector:
    app: java-app
  ports:
    - protocol: TCP
      port: 81
      targetPort: 8080
