appjava/ingress-java-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-ingress
  namespace: java-app-space
spec:
  rules:
    - host: tkquoc.java.app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: java-app-service
                port:
                  number: 8080
